fix horizontal overflow

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ html, body {
 #body-container {
     width: 100vw;
     height: 100vh;
+    max-width: 100%;
     display: flex;
     flex-direction: row;
     background-color: white;
@@ -207,7 +208,7 @@ html, body {
     content: "✔";
     font-size: 1.1em;
     left: 5px;
-    top: 2px;
+    top: 1px;
     visibility: hidden;
     position: absolute;
   }
